--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,5 +30,7 @@ jobs:
           git clone https://github.com/vutuanhai237/qoop.git
       - name: Run testcases
         run: |
-          cd test
+          cd tests
           python -m pytest
+      - name: Run mutation test
+        run: mutatest
